--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="card-body p-4 b-b-1">
           <div class="container-fluid">
-            <h2 class="card-text">Coupon nel Carrello</h2>
+            <!--<h2 class="card-text ">Coupon nel Carrello</h2>-->
             <div class="container-fluid d-none d-md-none d-xl-block">
               <table class="table table-striped">
                 <thead>
@@ -100,8 +100,8 @@
 
 
                   </div>
-                  <div style="float: left !important; min-width: 100%">{{coupon.description}}</div>
-                  <div  style="float: left !important;" class="text-info">
+                  <div style="float: left !important; min-width: 100% ; padding-left: 1em; padding-right: 1em">{{coupon.description}}</div>
+                  <div  style="float: left !important; padding-left: 1em; padding-right: 1em;padding-bottom: 0.4em" class="text-info">
 
 
                       Scadenza: {{coupon.valid_until === null? 'Unlimited': formatUntil(coupon.valid_until) }}
@@ -120,22 +120,25 @@
               </div> <!-- SM CARD -->
 
 
-            <div class="float-right">
-              <h4>Importo totale: € {{totalAmount}}</h4>
+
+          </div>
+            <div class="float-right  p-2">
+              <h4 class="d-md-block d-lg-block d-xl-block d-none">Importo totale: {{formatPrice(totalAmount)}}</h4>
+              <h5 style="margin-right: -2em" class="d-block d-md-none d-lg-none d-xl-none ">Totale: {{formatPrice(totalAmount)}}</h5>
+
             </div>
 
-            <h2 class="card-text mt-5">Dati fatturazione</h2>
+            <h2 class="card-text mt-5 d-md-block d-lg-block d-xl-block d-none ">Dati fatturazione</h2>
+            <h4 style="margin-left: -1.5em" class="card-text mt-5 d-block d-md-none d-lg-none d-xl-none p-2">Dati fatturazione</h4>
 
-            <p><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
-            <p><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
-            <p><b>Account Paypal: </b>{{user.email_paypal}}</p>
-          </div>
-
+            <p class=" p-2"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
+            <p class=" p-2"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
+            <p class=" p-2"><b>Account Paypal: </b>{{user.email_paypal}}</p>
           <button class="btn btn-lg btn-success float-right ml-2 d-md-block d-lg-block d-xl-block d-none" (click)="openModal(template)">Conferma e paga
 
           </button>
 
-          <button class="btn btn-lg btn-success  float-right ml-2 d-block d-md-none d-lg-none d-xl-none" (click)="openModal(template)">
+          <button class="btn btn-lg btn-success p-2  float-right ml-2 d-block d-md-none d-lg-none d-xl-none" (click)="openModal(template)">
             <i class="fas fa-euro-sign"></i>
             Paga
           </button>
@@ -143,7 +146,7 @@
           <button class="btn btn-lg btn-primary float-right d-md-block d-lg-block d-xl-block d-none" (click)="retry()">
             Ritorna al Carrello</button>
 
-          <button class="btn btn-lg btn-primary  float-right d-block d-md-none d-lg-none d-xl-none" (click)="retry()">
+          <button class="btn btn-lg btn-primary p-2  float-right d-block d-md-none d-lg-none d-xl-none" (click)="retry()">
             <i class="fas fa-shopping-basket"></i>
             Carrello</button>
         </div>
