--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.scss
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.scss
@@ -19,3 +19,53 @@
   overflow: hidden !important;
 }
 
+.margin-p {
+  margin-left: 1em;
+}
+
+.margin-top-info {
+  margin-top: 3em
+}
+
+.div-quantity {
+
+  font-size: 1.5em;
+  padding-right: 0.4em;
+  padding-left: 0.4em
+}
+
+.div-validity {
+
+  float: left !important;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 0.4em
+}
+
+.div-description {
+
+  float: left !important;
+  min-width: 100% ;
+  padding-left: 1em;
+  padding-right: 1em
+}
+
+
+.div-title {
+  padding-bottom: 1em;
+  padding-top: 1em
+}
+
+.div-image {
+  max-width: 120%;
+  max-height: 120%;
+  margin-left: -0.5em;
+  margin-right: 0.5em
+}
+.div-image-xs {
+  max-width: 125%;
+  max-height: 125%;
+  margin-left: -0.5em;
+  margin-right: 0.5em
+}
+
