--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -66,6 +66,11 @@
     </tbody>
 
   </table>
+
+  <div style="text-align: right; padding-bottom: 2em;padding-top: 1em">
+    <h5  class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
+
+  </div>
   <div class="card-body p-0">
     <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
       class="fas fa-euro-sign mr-2"></i>Vai alla cassa
@@ -130,6 +135,10 @@
     </tbody>
 
   </table>
+  <div style="text-align: right; ; padding-bottom: 2em; padding-top: 1em">
+    <h5  class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
+
+  </div>
   <div class="card-body p-0">
     <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
       class="fas fa-euro-sign mr-2"></i>Vai alla cassa
@@ -195,7 +204,12 @@
 
 
     </div>
-    <div style="padding-bottom: 5em">
+    <div style="text-align: right" class=" float-right">
+      <h5  class="">Totale: {{formatPrice(totalAmount)}}</h5>
+
+    </div>
+
+    <div style="padding-bottom: 5em" class="float-right col">
       <button class="btn btn-lg btn-success float-right" type="button" (click)="goToDetailPayment()"><i
         class="fas fa-euro-sign mr-2"></i> Paga
       </button>
