--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 // If you want to override variables do it here
 @import "variables";
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 // Import styles
 @import "node_modules/@coreui/coreui/scss/coreui";
