get Brokers from backend

--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -113,12 +113,12 @@
               <label class="col-sm-2 col-form-label">Privato per: </label>
               <div class="col-sm-8">
                 <ng-select formControlName="broker"
-                  [items]="broker"
+                  [items]="brokers"
                   [multiple]="true"
                   [closeOnSelect]="true"
                   [searchable]="true"
-                  bindLabel="name"
-                  placeholder="Select broker"
+                  bindLabel="username"
+                  placeholder="Seleziona broker"
                   [(ngModel)]="selectedBroker">
                 </ng-select>
               </div>
