--- a/src/app/core/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/breadcrumb/breadcrumb.component.html
@@ -16,8 +16,7 @@
       <div  class="ml-auto my-auto cursor-pointer cart-div" (click)="viewCart()" style="margin-right:18em">
         <a *ngIf="cart.length === 0">Il tuo carrello <b class="text-info">è vuoto</b>! </a>
         <a class="text-dark" routerLink="/reserved-area/consumer/cart" *ngIf="cart.length > 0 && desktopMode">
-
-           {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} {{cart.length === 1 ? 'coupon' : 'coupons'}}</b> nel tuo carrello.
+           {{cart.length === 1 ? "C'è" : 'Ci sono'}} <b class="text-info">{{cart.length}} coupon</b> nel tuo carrello.
           <!-- english version -->
           <!--There {{cart.length === 1 ? 'is' : 'are'}} <b class="text-info">{{cart.length}} item{{cart.length === 1 ? '' : 's'}}</b> in your cart. Checkout now!-->
           <i style="font-size: 1.5em !important;" class="fas fa-shopping-cart text-warning"></i>
