--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div (mouseenter)="sendHideFalse()" (mouseleave)="sendHideTrue()" class="padding-header" *ngIf="desktopMode">
+<div (mouseenter)="sendHide(false)" (mouseleave)="sendHide(true)" class="padding-header" *ngIf="desktopMode">
   <!-- TODO to move to features the desktopMode -->
   <div *ngIf="isUserLoggedIn" id="sidebar-container"
        [ngStyle]="{'min-width': hide && userType == '2' ? '20px' : '230px', 'max-width': hide ? '50px' : '230px'}">
@@ -28,19 +28,27 @@
       <div *ngIf="this.userType == '2' || this.userType == '0'">
 
         <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-shopping-basket icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}" >
+            <span class="fas fa-shopping-basket icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">Shopping</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-shopping-bag icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-shopping-bag icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">I miei acquisti</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/order']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-book icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-book icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0'" class="menu-collapsed">I miei ordini</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/coupon-import']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-file-import icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-file-import icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0' " class="menu-collapsed">Importa coupon</span>
         </a>
       </div>
@@ -55,16 +63,22 @@
 
         <a [routerLink]="['/reserved-area/' + userStringType +'/personal-info']"
            class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-user icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-user icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Informazioni personali</span>
         </a>
         <a [routerLink]="['/reserved-area/' + userStringType +'/payment-details']"
            class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-file-invoice icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-file-invoice icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0' || userType == '1'" class="menu-collapsed">Dati di fatturazione</span>
         </a>
         <div class="list-group-item list-group-item-action text-secondary">
-          <div class="text-center d-inline-block"><span class="fas fa-receipt icon-dimension"></span></div>
+          <div class="text-center d-inline-block" [ngStyle]="{'width': hide && userType == '2' ? '10px ' : '40px '}">
+            <span class="fas fa-receipt icon-dimension"></span>
+          </div>
           <span *ngIf="!hide || userType == '0' || userType == '1'">Ricevute</span>
         </div>
       </div>
