--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -13,15 +13,15 @@
 
         <a [routerLink]="['/reserved-area/producer/list']"
            class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-box icon-dimension"></span></div>
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-box icon-dimension"></span></div>
           <span class="menu-collapsed">I miei coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-plus-circle icon-dimension"></span></div>
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-plus-circle icon-dimension"></span></div>
           <span class="menu-collapsed">Aggiungi coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-file-contract icon-dimension"></span></div>
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-file-contract icon-dimension"></span></div>
           <span class="menu-collapsed">Reports</span>
         </a>
       </div>
@@ -54,7 +54,7 @@
       </div>
       <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
         <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block"><span class="fas fa-stamp icon-dimension"></span></div>
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-stamp icon-dimension"></span></div>
           <span class="menu-collapsed">Vidima coupon</span>
         </a>
       </div>
