--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
           <span class="menu-collapsed">Aggiungi coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action gray-sardcoin">
-          <div class="text-center d-inline-block producer-icon"><span class="fas fa-file-contract icon-dimension"></span></div>
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-chart-bar icon-dimension"></span></div>
           <span class="menu-collapsed">Reports</span>
         </a>
       </div>
