--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -1,28 +1,34 @@
-<div class="table-responsive d-none d-md-none d-lg-block">
+<div *ngIf="done" class="table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col" style="width: 40%">Titolo</th>
-          <th scope="col" style="width: 20%">Immagine</th>
-          <th scope="col" style="width: 15%">Prezzo</th>
-          <th scope="col" style="width: 25%">Stato</th>
-          <th scope="col" style="width: 10%"></th>
+          <th scope="col" style="width: 20%">Ordine N°</th>
+          <th scope="col" style="width: 30%">Data acquisto</th>
+          <th scope="col" style="width: 30%">Costo</th>
+
+          <!--<th scope="col" style="width: 15%">Prezzo</th>-->
+          <!--<th scope="col" style="width: 25%">Stato</th>-->
+          <th scope="col" style="width: 20%"></th>
         </tr>
       </thead>
 
-      <tbody class="col-sm-12" *ngFor="let coupon of coupons">
-        <tr *ngFor="let token of coupon.CouponTokens ">
+      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
+        <tr *ngIf="order">
           <td>
-            <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-            <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+            <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
           </td>
-          <td ><img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px;" alt="Card image cap"></td>
-          <td >{{formatPrice(coupon.price)}}</td>
-          <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>
+          <td>
+            <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
+            <i style="color: #999; font-size: 15px;"> ore:{{order.purchase_time.substr(11, 8)}}</i>
+
+          </td>
 
           <td>
-            <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
+            <span style="font-size: 17px;">{{order.price}}</span> <br/>
+          </td>
+          <td>
+            <button type="button" (click)="details(order, '')" class="btn btn-info text-white">
               <i class="fas fa-info-circle"></i> Dettagli
             </button>
           </td>
@@ -37,24 +43,30 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" style="width: 50%">Titolo</th>
-        <th scope="col" style="width: 15%">Prezzo</th>
-        <th scope="col" style="width: 25%">Stato</th>
-        <th scope="col" style="width: 10%"></th>
+        <th scope="col" style="width: 20%">Ordine N°</th>
+        <th scope="col" style="width: 30%">Data acquisto</th>
+        <th scope="col" style="width: 30%">Costo</th>
+
+        <!--<th scope="col" style="width: 25%">Stato</th>-->
+        <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
 
-      <tbody class="col-sm-12" *ngFor="let coupon of coupons">
-      <tr *ngFor="let token of coupon.CouponTokens ">
+      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
+      <tr *ngIf="order ">
         <td>
-          <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-          <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+          <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
         </td>
-        <td >{{formatPrice(coupon.price)}}</td>
-        <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>
+        <td>
+          <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
+            <i style="color: #999; font-size: 15px;"> ore:{{order.purchase_time.substr(11, 8)}}</i>
+        </td>
+        <td>
+          <span style="font-size: 17px;">{{order.price}}</span> <br/>
+        </td>
 
         <td>
-          <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
+          <button type="button" (click)="details(order, '')" class="btn btn-info text-white">
             <i class="fas fa-info-circle"></i> Dettagli
           </button>
         </td>
@@ -68,21 +80,30 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" style="width: 60%">Titolo</th>
-        <th scope="col" style="width: 20%">Stato</th>
+        <th scope="col" style="width: 20%">N°</th>
+        <th scope="col" style="width: 30%">Data acquisto</th>
+        <th scope="col" style="width: 30%">Costo</th>
         <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
 
-      <tbody class="col-sm-12" *ngFor="let coupon of coupons">
-      <tr *ngFor="let token of coupon.CouponTokens ">
+      <tbody class="col-sm-12" *ngFor="let order of ordersFull">
+      <tr *ngIf="order">
         <td>
-          <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-          <i style="color: #999; font-size: 15px;">{{coupon.description.substr(0, 40) + '...'}}</i>
+          <span style="font-size: 17px;">{{order.order.id}}</span> <br/>
         </td>
-        <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>
+        <td>
+          <span style="color: #999; font-size: 15px;">{{order.purchase_time.substr(0, 10)}}</span>
+            <br/><i style="color: #999; font-size: 15px;">ore:{{order.purchase_time.substr(11, 8)}}</i>
+
+        </td>
+
+        <td>
+          <span style="font-size: 17px;">{{order.price}}</span> <br/>
+        </td>
+        <!--<td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b></td>-->
         <td class="text-center">
-          <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
+          <button type="button" (click)="details(order, '')" class="btn btn-info text-white">
             <i class="fas fa-info-circle"></i>
           </button>
         </td>
